--- a/templates/login.html
+++ b/templates/login.html
@@ -10,6 +10,27 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <script src="https://www.google.com/recaptcha/api.js?render=6LfmansqAAAAAFp5ytwMfFzmqd1N1FA_AGvbRzAI"></script>
+    <script>
+        function onSubmit(event) {
+            event.preventDefault();  // Prevent form submission to wait for the token
+            grecaptcha.ready(function() {
+                grecaptcha.execute('6LfmansqAAAAAFp5ytwMfFzmqd1N1FA_AGvbRzAI', { action: 'login' }).then(function(token) {
+                    // Add the token to the form as a hidden input field
+                    var input = document.createElement('input');
+                    input.type = 'hidden';
+                    input.name = 'g-recaptcha-response';
+                    input.value = token;
+
+                    // Append the token to the form
+                    document.getElementById('login-form').appendChild(input);
+
+                    // Now submit the form
+                    event.target.submit();
+                });
+            });
+        }
+    </script>
     <style>
         a, input, h1, .btn-login-page-login {
             font-family: 'Poppins', sans-serif;
@@ -170,14 +191,15 @@
                 <a href="{{ url_for('front_page') }}" class="btn btn-primary btn-back">
                     <i class="bi bi-arrow-return-left top-left-icon"></i>
                 </a>
-                <form class="login-box" method="POST" action="{{ url_for('login') }}">
+                <form id="login-form" class="login-box" method="POST" action="{{ url_for('login') }}" onsubmit="onSubmit(event)">
                     <div class="login-box-upper">
                         <h1 class="text-login">Log In to continue</h1>
                         <input type="text" name="ic" placeholder="No. IC" class="form-control form-text form-text-login">
                         <input type="password" name="password" placeholder="Password" class="form-control form-text form-text-login">
                     </div>
+
                     <input type="submit" value="Log in" class="btn btn-primary btn-login-page-login">
-                    <a href="forgot_password" class="forgot-password">Forgot Pessword?</a>
+                    <a href="forgot_password" class="forgot-password">Forgot Password?</a>
                 </form>
             </div>
             <div class="register-container">
