--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -69,7 +69,7 @@
 
 <nav class="navbar p-1 navbar-expand">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{{ url_for('front_page') }}">StaySync DEV</a>
+        <a class="navbar-brand" href="{{ url_for('front_page') }}">StaySync</a>
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 {% if session.get('user_role') in ['Student', 'Warden', 'Admin'] %}
